# mac-ocr-hardsubs

./: .gitignore  README.md  cleanup-prompt.md  count_single_frame.py  ocranime.py  pyproject.toml  sanity_check.py  validation-compare-prompt.md
screenai_protos/: chrome_screen_ai.proto
