[tool.poetry]
name = "ocranime"
version = "0.1.0"
description = "Extract burned-in subtitles from anime videos using OCR"
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
python-dotenv = "^1.2.2"
pyobjc-framework-Vision = {version = ">=10.0", optional = true}
torch = {version = ">=2.0", optional = true}
transformers = {version = ">=4.40", optional = true}
qwen-vl-utils = {version = ">=0.0.2", optional = true}
flash-attn = {version = ">=2.5", optional = true}
accelerate = {version = ">=0.30", optional = true}
torchvision = {version = ">=0.17", optional = true}
mlx-lm = {version = ">=0.22", optional = true}
bitsandbytes = {version = ">=0.45", optional = true}
chandra-ocr = {version = ">=0.2", extras = ["hf"], optional = true}
llama-cpp-python = {version = ">=0.3", optional = true}

[tool.poetry.extras]
apple = ["pyobjc-framework-Vision"]
dotsocr = ["torch", "transformers", "qwen-vl-utils", "accelerate", "torchvision", "flash-attn"]
dots-4bit = ["torch", "transformers", "qwen-vl-utils", "accelerate", "torchvision", "bitsandbytes"]
chandra = ["torch", "transformers", "chandra-ocr", "accelerate"]
chandra-q4 = ["llama-cpp-python"]
lighton = ["torch", "transformers"]
mlx = ["mlx-lm"]

[tool.poetry.scripts]
ocranime = "ocranime:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
