[tool.poetry]
name = "ocranime"
version = "0.1.0"
description = "Extract burned-in subtitles from anime videos using OCR"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.2.2"
pyobjc-framework-Vision = {version = ">=10.0", optional = true}
torch = {version = ">=2.0", optional = true}
transformers = {version = ">=4.40", optional = true}
qwen-vl-utils = {version = ">=0.0.2", optional = true}
flash-attn = {version = ">=2.5", optional = true}
accelerate = {version = ">=0.30", optional = true}
torchvision = {version = ">=0.17", optional = true}
dots-mocr = {git = "https://github.com/rednote-hilab/dots.mocr.git", optional = true}
bitsandbytes = {version = ">=0.43", optional = true}
mlx-lm = {version = ">=0.22", optional = true}
pillow = "^12.1.1"
protobuf = {version = ">=5.0"}
grpcio-tools = "^1.80.0"

[tool.poetry.extras]
apple = ["pyobjc-framework-Vision"]
dotsocr = ["torch", "transformers", "qwen-vl-utils", "accelerate", "torchvision", "dots-mocr", "flash-attn"]
dots4bit = ["torch", "transformers", "qwen-vl-utils", "accelerate", "torchvision", "dots-mocr", "bitsandbytes"]
screenai = ["protobuf", "grpcio-tools"]
mlx = ["mlx-lm"]

[tool.poetry.scripts]
ocranime = "ocranime:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
