[tool.poetry]
name = "ocranime"
version = "0.1.0"
description = "Extract burned-in subtitles from anime videos using OCR"
authors = []

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
python-dotenv = "^1.2.2"
pyobjc-framework-Vision = {version = ">=10.0", optional = true}
mlx-lm = {version = ">=0.22", optional = true}
pillow = "^12.1.1"
protobuf = {version = ">=5.0"}
grpcio-tools = "^1.80.0"
numpy = "^2.4.4"

[tool.poetry.extras]
apple = ["pyobjc-framework-Vision"]
mlx = ["mlx-lm"]

[tool.poetry.scripts]
ocranime = "ocranime:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
